# d3d12-renderpass-barrier-mwe

./: .gitmodules  readme.md
src/: CMakeLists.txt  vcpkg.json
src/cmake/: modules.cmake
src/sample/: CMakeLists.txt  basic_fs.dxi  basic_vs.dxi  main.cxx
